[package]
name = "pm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
csv="1.3.0"
anyhow="1.0.75"
chrono="0.4"
serde={ version="1.0", features = ["derive"] }
dotenv="0.15"
float-ord = "0.3.2"
num-traits = "0.2.17"
prettytable-rs = "0.10.0"
